; ModuleID = '/home/carl/AnghaBench/openssl/crypto/rand/extr_rand_lib.c_RAND_keep_random_devices_open.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/rand/extr_rand_lib.c_RAND_keep_random_devices_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rand_init = common dso_local global i32 0, align 4
@do_rand_init = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RAND_keep_random_devices_open(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @do_rand_init, align 4
  %4 = call i64 @RUN_ONCE(i32* @rand_init, i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @rand_pool_keep_random_devices_open(i32 %7)
  br label %9

9:                                                ; preds = %6, %1
  ret void
}

declare dso_local i64 @RUN_ONCE(i32*, i32) #1

declare dso_local i32 @rand_pool_keep_random_devices_open(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
